--- a/Inspire Interiors/src/styles/home.css
+++ b/Inspire Interiors/src/styles/home.css
@@ -292,6 +292,26 @@
   padding-top: 120px;
   padding-bottom: 40px;
 }
+.slider{
+    height: 15rem;
+    margin-bottom: 40px;
+}
+.slide{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: calc(100%/2);
+    height: 200px;
+    width: 200px;
+    margin-right: 10px;
+    object-fit:scale-down;
+
+    
+    @media(max-width: 1150px) {
+        width: 100%
+    }
+    
+}
 
 
 
