--- a/Inspire Interiors/src/styles/navbar.css
+++ b/Inspire Interiors/src/styles/navbar.css
@@ -2,6 +2,7 @@
     background-color: #023047;
     padding-left: 1em !important;
     padding-right: 2em !important;
+    height: 70px;
 }
 
 .search-form{
