--- a/Inspire Interiors/src/styles/login.css
+++ b/Inspire Interiors/src/styles/login.css
@@ -2,15 +2,15 @@
 @import url('https://fonts.googleapis.com/css?family=Jost');
 
 .banner-login{
-    max-height: 45em;
-    height: 44em;
+    max-height: 48em;
+    height: 48em;
     /* background-color: black; */
     border-radius: 0 0 10em 0;
     padding: 0%;
 }
 .login-carousel, .carousel-img{
     border-radius: 0 0 10em 0;
-    height: 44em;
+    height: 48em;
 }
 .carousel-img img {
     height: 100%;
@@ -20,7 +20,37 @@
   
 .content-login{
     height: 44em;
+    font-family: 'Jost', DM-serif-display;
 }
 .w-98 {
     width: 98%;
+}
+.w-92{
+    width: 92%;
+}
+.w-42{
+    width: 42%;
+}
+.fw-400{
+    font-weight: 400;
+}
+.fw-600{
+    font-weight: 600;
+}
+.google-icon {
+    width: 20px; 
+    height: 20px; 
+  }
+.facebook-icon {
+  width: 20px; 
+  height: 20px; 
+}
+.btnstyle{
+    background-color: #FFFFFF ;
+    color: #2F2F2F ;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.11);
+}
+.heading-txt{
+    margin-left: 4rem;
+    color: #023047
 }
