--- a/Inspire Interiors/src/styles/header.css
+++ b/Inspire Interiors/src/styles/header.css
@@ -5,6 +5,8 @@
     background-color: #023047;
     padding-left: 1em !important;
     padding-right: 2em !important;
+    z-index: 999;
+    height: 100% !important;
 }
 
 /* .darktoggle{
