--- a/Inspire Interiors/src/styles/login.css
+++ b/Inspire Interiors/src/styles/login.css
@@ -48,7 +48,7 @@
 .btnstyle{
     background-color: #FFFFFF ;
     color: #2F2F2F ;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.11);
+    box-shadow: 0px 20px 60px 0px rgba(86, 89, 146, 0.10);
 }
 .heading-txt{
     margin-left: 4rem;
