--- a/Inspire Interiors/src/styles/customer/sidebar.css
+++ b/Inspire Interiors/src/styles/customer/sidebar.css
@@ -9,12 +9,9 @@
     background: #023047 !important;
     position: inherit !important;
     border-radius: 0 15px 0 0;
-    transition: width 0.5s  !important;
 
 }
-/* .sidenav---sidenav-navitem---uwIJ- .sidenav---selected---1EK3y .sidenav---highlighted---oUx9u{
-    color: #239b1a !important;
-} */
+
 
 .sidenav---sidenav-nav---3tvij > .sidenav---sidenav-navitem---uwIJ-.sidenav---highlighted---oUx9u > .sidenav---navitem---9uL5T
 {
@@ -105,7 +102,7 @@
 }
 .sidenav---sidenav---_2tBP.sidenav---expanded---1KdUL .sidenav---sidenav-nav---3tvij > .sidenav---sidenav-navitem---uwIJ- .sidenav---navicon---3gCRo + .sidenav---navtext---1AE_f {
     visibility: visible;
-    width: 120px;
+    width: inherit;
     opacity: 1;
     -ms-filter: none;
     filter: none;
@@ -113,7 +110,8 @@
     -moz-transition: opacity 0.2s linear;
     -o-transition: opacity 0.2s linear;
     -ms-transition: opacity 0.2s linear;
-    transition:visibility 0s 0.2s, opacity 0.2s linear;
+    transition:visibility 0s 0.2s, opacity 0.2s,width 1s linear;
+    
 }
 .sidenav---sidenav-nav---3tvij > .sidenav---sidenav-navitem---uwIJ- > .sidenav---navitem---9uL5T .sidenav---navicon---3gCRo + .sidenav---navtext---1AE_f {
     width: 0 ;
@@ -125,7 +123,8 @@
     -moz-transition: visibility 0s 0.2s, opacity 0.2s linear;
     -o-transition: visibility 0s 0.2s, opacity 0.2s linear;
     -ms-transition: visibility 0s 0.2s, opacity 0.2s linear;
-    transition: visibility 0s 0.2s, opacity 0.2s linear;
+    transition: visibility 0s 0.2s, opacity 0.2s,min-width 0.5s linear;
+    /* transition: min-width 0.5s !important; */
 }
 
 .sidenav---sidenav---_2tBP {
@@ -149,5 +148,6 @@
     -moz-transition: min-width 0.2s;
     -o-transition: min-width 0.2s;
     -ms-transition: min-width 0.2s;
-    transition: visibility 0.5s;
+    transition: visibility 0.5s,min-width 0.5s ;
+    /* transition: min-width 0.5s; */
 }
