--- a/Inspire Interiors/src/styles/customer/sidebar.css
+++ b/Inspire Interiors/src/styles/customer/sidebar.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Cabin');
 
 .sidenav---sidenav---_2tBP .sidenav---expanded---1KdUL{
-      min-width:240px !important;
+      min-width:inherit !important;
 
 }
 
@@ -73,6 +73,9 @@
   justify-content: center;
 
 }
+.sidenav---sidenav-nav---3tvij > .sidenav---sidenav-navitem---uwIJ- > .sidenav---navitem---9uL5T .sidenav---navicon---3gCRo > *, .sidenav---sidenav-nav---3tvij > .sidenav---sidenav-navitem---uwIJ- > .sidenav---navitem---9uL5T .sidenav---navtext---1AE_f > * {
+    color: #ffffff;
+}
 .sidenav---sidenav-nav---3tvij > .sidenav---sidenav-navitem---uwIJ- > .sidenav---navitem---9uL5T .sidenav---navicon---3gCRo {
     display: flex;
     align-items: center;
@@ -97,12 +100,11 @@
   background-repeat: no-repeat !important;
   background-size: cover;
   background-position:right;
-  ;
   
 }
 .sidenav---sidenav---_2tBP.sidenav---expanded---1KdUL .sidenav---sidenav-nav---3tvij > .sidenav---sidenav-navitem---uwIJ- .sidenav---navicon---3gCRo + .sidenav---navtext---1AE_f {
     visibility: visible;
-    width: inherit;
+    width: 100px;
     opacity: 1;
     -ms-filter: none;
     filter: none;
@@ -110,10 +112,11 @@
     -moz-transition: opacity 0.2s linear;
     -o-transition: opacity 0.2s linear;
     -ms-transition: opacity 0.2s linear;
-    transition:visibility 0s 0.2s, opacity 0.2s,width 1s linear;
+    transition:visibility 0s 0.5s linear, opacity 0.5s,width 0.5s linear;
     
 }
 .sidenav---sidenav-nav---3tvij > .sidenav---sidenav-navitem---uwIJ- > .sidenav---navitem---9uL5T .sidenav---navicon---3gCRo + .sidenav---navtext---1AE_f {
+    color: white;
     width: 0 ;
     visibility: hidden;
     opacity: 0;
@@ -151,3 +154,16 @@
     transition: visibility 0.5s,min-width 0.5s ;
     /* transition: min-width 0.5s; */
 }
+
+@media only screen and (max-width: 600px) {
+    .sidenav---sidenav---_2tBP.sidenav---expanded---1KdUL .sidenav---sidenav-nav---3tvij > .sidenav---sidenav-navitem---uwIJ- .sidenav---navicon---3gCRo + .sidenav---navtext---1AE_f{
+        display: none;
+    }
+    .sidenav---sidenav---_2tBP.sidenav---expanded---1KdUL{
+        min-width: 64px !important;
+    }
+    .sidenav---sidenav-toggle---1KRjR .sidenav---icon-bar---u1f02{
+        display: none;
+    }
+}
+
