--- a/Inspire Interiors/src/styles/user.css
+++ b/Inspire Interiors/src/styles/user.css
@@ -1,63 +1,31 @@
-.User {
-width: 48px;
-height: 32px;
-font: 700 24px/32px 'Cabin';
-color: #17183B;
-}
-.auto{
-display: flex;
-justify-content: center;
-width: 294px;
-height: 40px;
-position:absolute;
-padding-left:20% ;
-top: 18%;
-}
-.icon{
-    position: absolute;
-    padding-left:25% ;
-    color: #A2A3B1;
-}
-.All
-{
-   
-width: 48px;
-height: 32px;
-font: 700 24px/32px 'Cabin';
-color:#A2A3B1; 
-position: absolute;
-padding-left: 35%;
-}
-
-.line-1{
+/* .line-1{
 width: 1000px;
 height: 1.27px;
 background: #035C94;
-}
-.tabs{
+} */
+/* .tabs{
 position: absolute;
 width: 16px;
 height: 17px;
 left: 20%;
 top: 150px;
-}
+} */
 
-.buttonset {
+/* .buttonset {
     display: flex; 
     line-height: 10px;
     font-size: 14px;
     
-}
+} */
 
-.buttonset > button {
-    /* Remove display: flex and font-family: medium; from here */
-    color: #035C94;
-    border-bottom: 2px; /* Add the border style as solid */
+ /*.buttonset > button {
+    color: #2a6082;
+    border-bottom: 2px; 
     border-radius: 0;
   }
 
  
-  .buttonset button:hover {
+ .buttonset button:hover {
     border: none;
     border-bottom: 2px solid  #035C94;
     
@@ -98,15 +66,15 @@ top: 150px;
    
   }
 
-  /* .table-separator-top {
+   .table-separator-top {
     position: absolute;
     width: 1453.01px;
     height: 1.27px;
     left: 354px;
     top: 354.7px;
     background: rgba(3, 92, 148, 0.24);
-  } */
-  /* .table-separator-bottom {
+  } 
+   .table-separator-bottom {
     position: absolute;
     width: 1453.01px;
     height: 1.27px;
