Login Functionality Added
User Backend Component Partially Completed

--- a/Inspire Interiors/src/styles/customer/designs.css
+++ b/Inspire Interiors/src/styles/customer/designs.css
@@ -17,3 +17,6 @@
 .carousel-control-prev, .carousel-control-next,.carousel-indicators  {
     display: none;
 }
+.breadcrumb a{
+    color: #000 !important;
+}
