--- a/Inspire Interiors/src/styles/customer/myOrders.css
+++ b/Inspire Interiors/src/styles/customer/myOrders.css
@@ -73,7 +73,7 @@
 
 @media only screen and (max-width: 630px) {
 .max-width {
-    max-width:min-content !important;
+    /* max-width:min-content; */
         max-width: 300px;
 }
 .background-total{
