--- a/Inspire Interiors/src/styles/customer/marketplace.css
+++ b/Inspire Interiors/src/styles/customer/marketplace.css
@@ -3,7 +3,7 @@
 }
 .background-grey{
     margin-right: 2rem;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
     width:inherit;
     min-height: 84vh;
     font-family: 'Cabin' !important;    
@@ -31,6 +31,11 @@
 }
 .h-80{
     min-height: 85vh;
+}
+
+.carousel-height{
+    max-height: 200px;
+    min-height: 200px;
 }
 
 @media only screen and (max-width: 630px) {
