--- a/Inspire Interiors/src/styles/customer/designs.css
+++ b/Inspire Interiors/src/styles/customer/designs.css
@@ -14,9 +14,9 @@
     height: unset;
     width: 100%;
 }
-.carousel-control-prev, .carousel-control-next,.carousel-indicators  {
+/* .carousel-control-prev, .carousel-control-next,.carousel-indicators  {
     display: none;
-}
+} */
 .breadcrumb a{
     color: #000 !important;
 }
