--- a/Inspire Interiors/src/styles/admin/dashboard.css
+++ b/Inspire Interiors/src/styles/admin/dashboard.css
@@ -1,6 +1,7 @@
 .designer{
     background-color: #035C94;
     border-radius: 10px;
+    color: #fff;
 }
 .vendor{
     background-color: #FFC00C;
@@ -33,8 +34,10 @@
   }
   .img{
     width: 40px;
+    height:40px;
   }
   .button{
+    width: 200px;
     background-color:#C4C4C4;
     color:#035C94;
     
