--- a/Inspire Interiors/src/styles/customer/designs.css
+++ b/Inspire Interiors/src/styles/customer/designs.css
@@ -14,7 +14,7 @@
     height: unset;
     width: 100%;
 }
-/* .carousel-control-prev, .carousel-control-next,.carousel-indicators  {
+.design-customer-page .carousel-control-prev, .design-customer-page .carousel-control-next,.design-customer-page .carousel-indicators  {
     display: none;
 } */
 .breadcrumb a{
