--- a/Inspire Interiors/src/styles/admin/profile.css
+++ b/Inspire Interiors/src/styles/admin/profile.css
@@ -3,8 +3,8 @@ input{
     border-color: darkgray;
     height: 80%;
 }
-.btn{
-    background-color: #096C86;
+.btn-profile{
+    background-color: #035C94;
     border-radius: 5px;
     /* width: 100%; */
     
