--- a/Inspire Interiors/src/styles/customer/designs.css
+++ b/Inspire Interiors/src/styles/customer/designs.css
@@ -16,7 +16,7 @@
 }
 .design-customer-page .carousel-control-prev, .design-customer-page .carousel-control-next,.design-customer-page .carousel-indicators  {
     display: none;
-} */
+} 
 .breadcrumb a{
     color: #000 !important;
 }
