--- a/Inspire Interiors/src/styles/customer/checkout.css
+++ b/Inspire Interiors/src/styles/customer/checkout.css
@@ -10,3 +10,35 @@
 .h-custom{
     min-height: 75vh;
 }
+/* CustomButton.css */
+.btn-checkout {
+    position: relative;
+    background-color: #035C94;
+    color: #fff !important;
+    overflow: hidden;
+    transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    z-index: 1; /* Ensure the button text is on top */
+  }
+  
+  .btn-checkout::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 100%; /* Start off-screen to the right */
+    width: 100%;
+    height: 100%;
+    background-color: #023047 !important;
+    transition: right 0.4s ease-in-out; /* Adjust transition property */
+    z-index: -1; /* Put the pseudo-element behind the button content */
+  }
+  
+  .btn-checkout:hover {
+    background-color: #023047 !important;
+    color: #fff !important;
+    transform: scale(1.01);
+  }
+  
+  .btn-checkout:hover::before {
+    right: 0; /* Slide in from the right */
+  }
+  
