--- a/Inspire Interiors/src/styles/admin/dashboard.css
+++ b/Inspire Interiors/src/styles/admin/dashboard.css
@@ -37,8 +37,16 @@
     height:40px;
   }
   .button{
-    width: 200px;
+    /* width: 200px; */
     background-color:#C4C4C4;
     color:#035C94;
     
+  }
+
+  .admin-dashboard-div{
+    width:inherit !important;
+  }
+
+  .w-26{
+    width: 21% !important;
   }
