--- a/Inspire Interiors/src/styles/admin/report.css
+++ b/Inspire Interiors/src/styles/admin/report.css
@@ -1,3 +1,12 @@
+   .background-report{
+      width: inherit !important;
+      margin-right: 2rem;
+   }
+
+   .revenue-box{
+      margin-right: 2rem;
+   }
+   
    /* summary */
    .card-1{
         border: none;
