--- a/Inspire Interiors/src/styles/customerSupport/customerSupportdashboard.css
+++ b/Inspire Interiors/src/styles/customerSupport/customerSupportdashboard.css
@@ -11,6 +11,21 @@
     height: 15rem;
     margin-bottom: 40px;
 }
+
+.support-dashboard .progress-bar {
+    width: 100%;
+    height: 12px;
+    background-color: #FFC00C;
+    border-radius: 2px;
+    overflow: hidden;
+}
+  
+.support-dashboard .progress {
+    height: 100%;
+    width: 60%;
+    background-color: #F8F8F9;
+}
+
 .support-dashboard .slide{
     display: flex;
     justify-content: center;
