vendor new backend changes upload

--- a/Inspire Interiors/src/styles/customer/table.css
+++ b/Inspire Interiors/src/styles/customer/table.css
@@ -96,6 +96,14 @@ div.mdb-datatable div.mdb-datatable-filter{
     border-radius: 5px;
 }
 
+.new{
+    width: fit-content;
+    padding: 0.3rem;
+    background-color: #C8FFE0;
+    border-radius: 8px;
+    color: #000000  ;
+}
+
 .completed{
     width: fit-content;
     padding: 0.3rem;
