--- a/Inspire Interiors/src/styles/customer/viewProduct.css
+++ b/Inspire Interiors/src/styles/customer/viewProduct.css
@@ -43,3 +43,18 @@
     }
   }
 
+.custom-stripe-button button{
+  background: unset !important;
+  border: unset !important;
+  box-shadow: unset !important;
+  height: 100% !important;
+  margin: auto;
+}
+
+.custom-stripe-button button span{
+    background-image: unset !important;
+    height: 100% !important;
+        padding: 10px 20px !important;
+
+}
+
