--- a/Inspire Interiors/src/styles/customer/viewProduct.css
+++ b/Inspire Interiors/src/styles/customer/viewProduct.css
@@ -58,3 +58,14 @@
 
 }
 
+.defaultClass{
+    display: flex;
+    flex-direction: column;
+}
+
+.highlightClass{
+    display: flex;
+    flex-direction: column;
+    border: 3px solid #035C94;
+    border-radius: 15px;
+}
